Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-64925

QtWebEngine 5.9.3 fails to build against system ICU 60.1.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.9.3
    • WebEngine
    • None
    • Gentoo Linux

      Building with system-icu (60.1) fails like so:

      ../../3rdparty/chromium/components/url_formatter/url_formatter.cc:511:2: error: #error "Update aspirational_scripts per Unicode 10.0"
       #error "Update aspirational_scripts per Unicode 10.0"
        ^~~~~

      A change such as the following will allow for the build to succeed, without noticeable issues so far:

      --- a/src/3rdparty/chromium/components/url_formatter/url_formatter.cc	2017-11-08 21:13:31.000000000 +0200
      +++ b/src/3rdparty/chromium/components/url_formatter/url_formatter.cc	2017-11-30 16:37:00.116153976 +0200
      @@ -488,7 +488,7 @@
         // are added to the allowed set. The list has to be updated when a new
         // version of Unicode is released. The current version is 9.0.0 and ICU 60
         // will have Unicode 10.0 data.
      -#if U_ICU_VERSION_MAJOR_NUM < 60
      +#if U_ICU_VERSION_MAJOR_NUM < 60 || defined(TOOLKIT_QT)
         const icu::UnicodeSet aspirational_scripts(
             icu::UnicodeString(
                 // Unified Canadian Syllabics

      Thanks to carewolf for the likely-better-than-previously-devised fix.

      Gentoo Bug: https://bugs.gentoo.org/639220

        For Gerrit Dashboard: QTBUG-64925
        # Subject Branch Project Status CR V

            qt_webengine_team Qt WebEngine Team
            chiitoo chiitoo
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes