Fix compilation with system ICU 60

Without this change, compiling against system ICU >=60 will fail
at "Update aspirational_scripts per Unicode 10.0".

Task-number: QTBUG-64925
Change-Id: Ic263d9ead2c1092f5b55baa97eeff0bf91b1941e
Reviewed-by: Kai Koehne <kai.koehne@qt.io>